adding landing page

--- a/index.html
+++ b/index.html
@@ -7,7 +7,23 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    Hello world
+
+    <div class="landing-container container">
+      <img class="landing__avatar" src="./img/avatar.jpeg" alt="">
+      <h1 class="landing__name">Hey, I'm Anibal</h1>
+      <h2 class="landing__profession">Software Engineer && Content Creator</h2>
+      <div class="landing__social-links">
+        <i class="fab fa-twitter icon"></i>
+        <i class="fab fa-github icon"></i>
+        <i class="fas fa-envelope icon"></i>
+        <i class="fab fa-linkedin icon"></i>
+        <img class="icon" src="./img/replit-blue-period.svg" alt="replit icon">
+      </div>
+      <div class="landing learn-more">
+        <i class="fas fa-chevron-down icon"></i>
+      </div>
+    </div>
     <script src="script.js"></script>
+    <script src="https://kit.fontawesome.com/4d4699cd04.js" crossorigin="anonymous"></script>
   </body>
 </html>
