adding skeleton for the projects section

--- a/index.html
+++ b/index.html
@@ -51,24 +51,57 @@
       </div>
     </section>
     <section class="projects">
-      <h2 class="projects__title title">Projects</h2>
-      <h3 class="projects__subtitle shadow-subtitle">Builders build, huh?</h3>
+      <div class="container">
+        <h2 class="projects__title title">Projects</h2>
+        <h3 class="projects__subtitle shadow-subtitle">Builders build, huh?</h3>
 
-      <div class="project__card">
-        <div class="project__img-container">
-          <img src="./img/yourstats-cover.png" alt="Spotify connected app"/>
-        </div>
-        <div class="project__text-container">
-          <h3 class="project__title"></h3>
-          <p class="project__description"></p>
-          <p class="project__stack"></p>
-          <div class="project__links-container">
-            <a href="https://replit.com/@androsoa3/yourstats" target="_blank" alt="Replit source code" title="Replit source code">
-              <img id="replit-gray-icon" src="./img/replit-gray.svg">
-            </a>
-            <a href="#TODO" target="_blank" title="source code on github"><i class="fab fa-github gray-icon" ></i></a>
-            <a href="https://yourstats.androsoa3.repl.co/" target="_blank" title="Live Demo"><i class="fas fa-external-link-alt gray-icon"></i></a>
+        <div class="project__card">
+          <div class="project__img-container">
+            <img src="./img/yourstats-cover.png" alt="Spotify connected app"/>
           </div>
+          <div class="project__text-container">
+            <h3 class="project__title">Spotify Stats</h3>
+            <p class="project__description">A simple-to-use web app that lets you see general stats about you, such as Top Artists, Top Tracks, Top Albums and your Playlists.</p>
+            <p class="project__stack">
+              <span class="stack__item">Express</span>
+              <span class="stack__item">React</span>
+              <span class="stack__item">Spotify API</span>
+              <span class="stack__item">Replit</span>
+              <span class="stack__item">Styled Components</span>
+            </p>
+            <div class="project__links-container">
+              <a href="https://replit.com/@androsoa3/yourstats" target="_blank" alt="Replit source code" title="Replit source code">
+                <img id="replit-gray-icon" src="./img/replit-gray.svg">
+              </a>
+              <a href="#TODO" target="_blank" title="source code on github"><i class="fab fa-github gray-icon" ></i></a>
+              <a href="https://yourstats.androsoa3.repl.co/" target="_blank" title="Live Demo"><i class="fas fa-external-link-alt gray-icon"></i></a>
+            </div>
+          </div>
+          <div class="project__background"></div>
+        </div>
+        
+        <div class="project__card">
+          <div class="project__img-container">
+            <img src="./img/quiz-time-cover.png" alt="Spotify connected app"/>
+          </div>
+          <div class="project__text-container">
+            <h3 class="project__title">Quiz-time!!</h3>
+            <p class="project__description">A fun trivia game that queries data from the opentriviadb, lets you pick the range of difficulty, genre of the questions and number.</p>
+            <p class="project__stack">
+              <span class="stack__item">Vanilla JS</span>
+              <span class="stack__item">CSS</span>
+              <span class="stack__item">Opentdb</span>
+              <span class="stack__item">Replit</span>
+            </p>
+            <div class="project__links-container">
+              <a href="https://replit.com/@androsoa3/yourstats" target="_blank" alt="Replit source code" title="Replit source code">
+                <img id="replit-gray-icon" src="./img/replit-gray.svg">
+              </a>
+              <a href="#TODO" target="_blank" title="source code on github"><i class="fab fa-github gray-icon" ></i></a>
+              <a href="https://yourstats.androsoa3.repl.co/" target="_blank" title="Live Demo"><i class="fas fa-external-link-alt gray-icon"></i></a>
+            </div>
+          </div>
+          <div class="project__background"></div>
         </div>
       </div>
     </section>
