--- a/index.html
+++ b/index.html
@@ -1,121 +1,199 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
-    <title>replit</title>
-    <link href="style.css" rel="stylesheet" type="text/css" />
-  </head>
-  <body>
+	<head>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width" />
+		<title>replit</title>
+		<link href="style.css" rel="stylesheet" type="text/css" />
+	</head>
+	<body>
+		<section class="landing-container container">
+			<img class="landing__avatar" src="./img/avatar.jpeg" alt="" />
+			<h1 class="landing__name title">Hey, I'm Anibal</h1>
+			<h2 class="landing__profession subtitle">
+				Software Engineer && Content Creator
+			</h2>
+			<div class="landing__social-links">
+				<a
+					href="https://twitter.com/AnibalAndrade_"
+					target="_blank"
+					class="blue-icon"
+				>
+					<i class="fab fa-twitter"></i>
+				</a>
+				<a href="https://github.com/androso" target="_blank" class="blue-icon">
+					<i class="fab fa-github"></i>
+				</a>
+				<a href="mailto:androso421@gmail.com" target="_blank" class="blue-icon">
+					<i class="fas fa-envelope"></i>
+				</a>
+				<a
+					href="https://www.linkedin.com/in/an%C3%ADbal-andrade-329550194/"
+					target="_blank"
+					class="blue-icon"
+				>
+					<i class="fab fa-linkedin"></i>
+				</a>
+				<a
+					href="https://replit.com/@androsoa3"
+					target="_blank"
+					class="blue-icon"
+				>
+					<img
+						id="replit-blue-icon"
+						src="./img/replit-blue-period.svg"
+						alt="replit icon"
+					/>
+				</a>
+			</div>
+			<div class="landing learn-more">
+				<i class="fas fa-chevron-down blue-icon"></i>
+			</div>
+		</section>
+		<hr class="sections-separator" />
+		<section class="about">
+			<div class="container">
+				<h2 class="about__title title">About Me</h2>
+				<p class="about__text">
+					I'm a
+					<span class="highlighted-paragraph">user-oriented</span> software
+					engineer whose goal is building products that :
+				</p>
+				<!-- FIND A WAY TO HIGHLIGHT EXPAND AND EASIER IN A SUBTLE WAY -->
+				<ul class="about__goals-list">
+					<li>Expand our intelligence.</li>
+					<li>Aim to make our lives easier.</li>
+				</ul>
+				<p class="about__text">
+					I love having a bird’s eye view of what I'm building, thus my decision
+					to become <span class="highlighted-paragraph">full-stack</span>, I
+					also have a
+					<span class="highlighted-paragraph">blog/garden</span> where I
+					write/sow on the things I'm learning/ideas.
+				</p>
+			</div>
+		</section>
+		<section class="projects">
+			<div class="container">
+				<h2 class="projects__title title">Projects</h2>
+				<h3 class="projects__subtitle shadow-subtitle">Builders build, huh?</h3>
 
-    <section class="landing-container container">
-      <img class="landing__avatar" src="./img/avatar.jpeg" alt="">
-      <h1 class="landing__name title">Hey, I'm Anibal</h1>
-      <h2 class="landing__profession subtitle">Software Engineer && Content Creator</h2>
-      <div class="landing__social-links">
-        <a href="https://twitter.com/AnibalAndrade_" target="_blank" class="blue-icon">
-          <i class="fab fa-twitter"></i>
-        </a>
-        <a href="https://github.com/androso" target="_blank" class="blue-icon">
-          <i class="fab fa-github "></i>
-        </a>
-        <a href="mailto:androso421@gmail.com" target="_blank" class="blue-icon">
-          <i class="fas fa-envelope"></i>
-        </a>
-        <a href="https://www.linkedin.com/in/an%C3%ADbal-andrade-329550194/" target="_blank" class="blue-icon">
-          <i class="fab fa-linkedin"></i>
-        </a>
-        <a href="https://replit.com/@androsoa3" target="_blank" class="blue-icon">
-          <img id="replit-blue-icon" src="./img/replit-blue-period.svg" alt="replit icon">
-        </a>
-      </div>
-      <div class="landing learn-more">
-        <i class="fas fa-chevron-down blue-icon"></i>
-      </div>
-    </section>
-    <hr class="sections-separator"/>
-    <section class="about">
-      <div class="container">
-        <h2 class="about__title title">About Me</h2>
-        <p class="about__text">
-          I'm a <span class="highlighted-paragraph">user-oriented</span> software engineer whose goal is building products that :
-        </p>
-        <!-- FIND A WAY TO HIGHLIGHT EXPAND AND EASIER IN A SUBTLE WAY -->
-        <ul class="about__goals-list">
-            <li>Expand our intelligence.</li>
-            <li>Aim to make our lives easier.</li>
-        </ul>
-        <p class="about__text">
-          I love having a bird’s eye view of what I'm building, thus my decision to become <span class="highlighted-paragraph">full-stack</span>, I also have a <span class="highlighted-paragraph">blog/garden</span> where I write/sow on the things I'm learning/ideas.
-        </p>
-      </div>
-    </section>
-    <section class="projects">
-      <div class="container">
-        <h2 class="projects__title title">Projects</h2>
-        <h3 class="projects__subtitle shadow-subtitle">Builders build, huh?</h3>
+				<div class="project__card">
+					<div class="project__img-container">
+						<a
+							href="https://yourstats.androsoa3.repl.co/"
+							target="_blank"
+							title="Live Demo"
+							><img src="./img/yourstats-cover.png" alt="Spotify connected app"
+						/></a>
+					</div>
+					<div class="project__text-container">
+						<h3 class="project__title">
+							<a
+								href="https://yourstats.androsoa3.repl.co/"
+								target="_blank"
+								title="Live Demo"
+								>Spotify Stats</a
+							>
+						</h3>
+						<p class="project__description">
+							A simple-to-use web app that lets you see general stats about you,
+							such as Top Artists, Top Tracks, Top Albums and your Playlists.
+						</p>
+						<p class="project__stack">
+							<span class="stack__item">Express</span>
+							<span class="stack__item">React</span>
+							<span class="stack__item">Spotify API</span>
+							<span class="stack__item">Replit</span>
+							<span class="stack__item styled-components"
+								>Styled Components</span
+							>
+						</p>
+						<div class="project__links-container">
+							<a
+								href="https://replit.com/@androsoa3/yourstats"
+								target="_blank"
+								alt="Replit source code"
+								title="Replit source code"
+							>
+								<img id="replit-gray-icon" src="./img/replit-gray.svg" />
+							</a>
+							<a href="#TODO" target="_blank" title="source code on github"
+								><i class="fab fa-github gray-icon"></i
+							></a>
+							<a
+								href="https://yourstats.androsoa3.repl.co/"
+								target="_blank"
+								title="Live Demo"
+								><i class="fas fa-external-link-alt gray-icon"></i
+							></a>
+						</div>
+						<div class="project__background"></div>
+					</div>
+				</div>
 
-        <div class="project__card">
-          <div class="project__img-container">
-            <img src="./img/yourstats-cover.png" alt="Spotify connected app"/>
-          </div>
-          <div class="project__text-container">
-            <h3 class="project__title">Spotify Stats</h3>
-            <p class="project__description">A simple-to-use web app that lets you see general stats about you, such as Top Artists, Top Tracks, Top Albums and your Playlists.</p>
-            <p class="project__stack">
-              <span class="stack__item">Express</span>
-              <span class="stack__item">React</span>
-              <span class="stack__item">Spotify API</span>
-              <span class="stack__item">Replit</span>
-              <span class="stack__item">Styled Components</span>
-            </p>
-            <div class="project__links-container">
-              <a href="https://replit.com/@androsoa3/yourstats" target="_blank" alt="Replit source code" title="Replit source code">
-                <img id="replit-gray-icon" src="./img/replit-gray.svg">
-              </a>
-              <a href="#TODO" target="_blank" title="source code on github"><i class="fab fa-github gray-icon" ></i></a>
-              <a href="https://yourstats.androsoa3.repl.co/" target="_blank" title="Live Demo"><i class="fas fa-external-link-alt gray-icon"></i></a>
-            </div>
-          </div>
-          <div class="project__background"></div>
-        </div>
-        
-        <div class="project__card">
-          <div class="project__img-container">
-            <img src="./img/quiz-time-cover.png" alt="Spotify connected app"/>
-          </div>
-          <div class="project__text-container">
-            <h3 class="project__title">Quiz-time!!</h3>
-            <p class="project__description">A fun trivia game that queries data from the opentriviadb, lets you pick the range of difficulty, genre of the questions and number.</p>
-            <p class="project__stack">
-              <span class="stack__item">Vanilla JS</span>
-              <span class="stack__item">CSS</span>
-              <span class="stack__item">Opentdb</span>
-              <span class="stack__item">Replit</span>
-            </p>
-            <div class="project__links-container">
-              <a href="https://replit.com/@androsoa3/yourstats" target="_blank" alt="Replit source code" title="Replit source code">
-                <img id="replit-gray-icon" src="./img/replit-gray.svg">
-              </a>
-              <a href="#TODO" target="_blank" title="source code on github"><i class="fab fa-github gray-icon" ></i></a>
-              <a href="https://yourstats.androsoa3.repl.co/" target="_blank" title="Live Demo"><i class="fas fa-external-link-alt gray-icon"></i></a>
-            </div>
-          </div>
-          <div class="project__background"></div>
-        </div>
-      </div>
-    </section>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <script src="script.js"></script>
-    <script src="https://kit.fontawesome.com/4d4699cd04.js" crossorigin="anonymous"></script>
-  </body>
+				<div class="project__card">
+					<div class="project__img-container">
+            <a href="https://quiz-time.androsoa3.repl.co/" target="_blank" title="Live Demo">
+              <img src="./img/quiz-time-cover.png" alt="Quiz Time!! trivia game" />
+            </a>
+					</div>
+					<div class="project__text-container">
+						<h3 class="project__title">
+							<a href="https://quiz-time.androsoa3.repl.co/" target="_blank"
+								>Quiz-time!!</a
+							>
+						</h3>
+						<p class="project__description">
+							A fun trivia game that queries data from the opentriviadb, lets
+							you pick the range of difficulty, genre of the questions and
+							number.
+						</p>
+						<p class="project__stack">
+							<span class="stack__item">Vanilla JS</span>
+							<span class="stack__item">CSS</span>
+							<span class="stack__item">Opentdb</span>
+							<span class="stack__item">Replit</span>
+						</p>
+						<div class="project__links-container">
+							<a
+								href="https://replit.com/@androsoa3/quiz-time"
+								target="_blank"
+								alt="Replit source code"
+								title="Replit source code"
+							>
+								<img id="replit-gray-icon" src="./img/replit-gray.svg" />
+							</a>
+							<a href="#TODO" target="_blank" title="source code on github"
+								><i class="fab fa-github gray-icon"></i
+							></a>
+							<a
+								href="https://quiz-time.androsoa3.repl.co/"
+								target="_blank"
+								title="Live Demo"
+								><i class="fas fa-external-link-alt gray-icon"></i
+							></a>
+						</div>
+						<div class="project__background"></div>
+					</div>
+				</div>
+			</div>
+		</section>
+		<hr class="sections-separator" />
+		<br />
+		<br />
+		<br />
+		<br />
+		<br />
+		<br />
+		<br />
+		<br />
+		<br />
+		<br />
+		<script src="script.js"></script>
+		<script
+			src="https://kit.fontawesome.com/4d4699cd04.js"
+			crossorigin="anonymous"
+		></script>
+	</body>
 </html>
