adding contact section

--- a/index.html
+++ b/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width" />
-		<title>replit</title>
-		<link href="style.css" rel="stylesheet" type="text/css" />
-	</head>
-	<body>
-		<section class="landing-container container">
-			<img class="landing__avatar" src="./img/avatar.jpeg" alt="" />
+
+<head>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width" />
+	<title>Anibal Andrade</title>
+	<link href="style.css" rel="stylesheet" type="text/css" />
+</head>
+
+<body>
+  
+	<section class="landing-container container">
+		<img class="landing__avatar" src="/img/avatar.jpeg" alt="" />
 			<h1 class="landing__name title">Hey, I'm Anibal</h1>
 			<h2 class="landing__profession subtitle">
 				Software Engineer && Content Creator
@@ -81,20 +84,21 @@
 				<div class="project__card">
 					<div class="project__img-container">
 						<a
-							href="https://yourstats.androsoa3.repl.co/"
+							href="https://youtu.be/ipCte18RoBc"
 							target="_blank"
 							title="Live Demo"
-							><img src="./img/yourstats-cover.png" alt="Spotify connected app"
-						/></a>
+							>
+              <img src="./img/yourstats-cover.png" alt="Spotify connected app"/>
+              <!-- </a>  -->
 					</div>
 					<div class="project__text-container">
 						<h3 class="project__title">
 							<a
-								href="https://yourstats.androsoa3.repl.co/"
+								href="https://youtu.be/ipCte18RoBc"
 								target="_blank"
-								title="Live Demo"
-								>Spotify Stats</a
-							>
+								title="Live Demo">
+                Spotify Stats
+                </a>
 						</h3>
 						<p class="project__description">
 							A simple-to-use web app that lets you see general stats about you,
@@ -118,11 +122,12 @@
 							>
 								<img id="replit-gray-icon" src="./img/replit-gray.svg" />
 							</a>
-							<a href="#TODO" target="_blank" title="source code on github"
+							<!-- <a href="#TODO" target="_blank" title="source code on github"
 								><i class="fab fa-github gray-icon"></i
-							></a>
+							></a> -->
+              <!-- WE GOTTA FIX THIS PROJECT -->
 							<a
-								href="https://yourstats.androsoa3.repl.co/"
+								href="https://youtu.be/ipCte18RoBc"
 								target="_blank"
 								title="Live Demo"
 								><i class="fas fa-external-link-alt gray-icon"></i
@@ -164,7 +169,7 @@
 							>
 								<img id="replit-gray-icon" src="./img/replit-gray.svg" />
 							</a>
-							<a href="#TODO" target="_blank" title="source code on github"
+							<a href="https://github.com/androso/quiz-app" target="_blank" title="source code on github"
 								><i class="fab fa-github gray-icon"></i
 							></a>
 							<a
@@ -180,13 +185,25 @@
 			</div>
 		</section>
 		<hr class="sections-separator" />
+    <section class="contact">
+      <div class="container">
+        <h2 class="contact__title title">Contact</h2>
+        <p class="contact__text">Feel free to reach out :)</p>
+        <div class="contact-links">
+          <a href="https://twitter.com/AnibalAndrade_" target="_blank">
+            <i class="fab fa-twitter"></i>
+            @AnibalAndrade_
+          </a>
+          <a href="mailto:androso421@gmail.com" target="_blank">
+            <i class="fas fa-envelope"></i>
+            androso421@gmail.com
+          </a>
+        </div>
+
+      </div>
+    </section>
 		<br />
-		<br />
-		<br />
-		<br />
-		<br />
-		<br />
-		<br />
+		
 		<br />
 		<br />
 		<br />
